--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ a {
 }
 
 header > nav {
-  background-color: rgb(47, 49, 49);
+  background-color: #2f3131;
   overflow: auto;
 }
 
@@ -207,7 +207,7 @@ header > div h1 {
   margin-left: 10px;
   font-size: 25px;
 }
-/****************************************/
+/*******************************************************************/
 .quinta_seccion {
   margin: 0% 2%;
   color: #000000;
@@ -347,3 +347,58 @@ textarea {
   color: #ffffff;
   background-color: #16a516b0;
 }
+/********************************************************/
+
+footer {
+  background-color: #2f3131;
+  color: #ffffff;
+}
+
+footer > div:first-child {
+  background-color: #464949;
+  padding: 30px;
+}
+
+footer > div:first-child p {
+  display: inline-block;
+  margin-left: 100px;
+}
+
+footer > div:first-child a {
+  margin-left: 50%;
+  font: 16px "Verdana", Calibri;
+  color: #16a516;
+}
+
+footer > div:first-child + div {
+  padding: 30px;
+  overflow: auto;
+}
+
+footer > div:first-child + div div {
+  float: left;
+  width: 30%;
+}
+footer > div:first-child + div div:first-child {
+  margin-left: 100px;
+}
+
+footer > div:first-child + div div:first-child * {
+  display: block;
+}
+
+footer > div:first-child + div div:first-child + div * {
+  display: block;
+  margin-bottom: 5px;
+}
+
+footer > div:first-child + div div:last-child p {
+  margin-bottom: 15px;
+}
+
+footer > div:first-child + div div:last-child i {
+  margin-right: 5px;
+  font-size: 40px;
+}
+
+/***************************************************************/
