--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,8 @@
 body {
-  margin: 0px;
-}
+  margin: 0px; }
 
 header {
-  background-color: #cccccc;
-}
+  background-color: #cccccc; }
 
 h1 {
   padding: 0px;
@@ -12,181 +10,145 @@ h1 {
   color: #ffffff;
   font-size: 80px;
   letter-spacing: 3px;
-  text-shadow: 1px 2px #000000;
-}
+  text-shadow: 1px 2px #000000; }
 
 h2 {
-  color: rgb(22, 165, 22);
-}
+  color: #16a516; }
 
 p {
   margin: 0px;
   padding: 0px;
-  font: 16px "Verdana", Calibri;
-}
+  font: 16px "Verdana", Calibri; }
 
 a {
   text-decoration: none;
-  color: #ffffff;
-}
+  color: #ffffff; }
 
 header > nav {
   background-color: #2f3131;
-  overflow: auto;
-}
+  overflow: auto; }
 
 header nav > div {
-  float: left;
-}
+  float: left; }
 
 header nav div:first-child {
-  margin-left: 10%;
-}
+  margin-left: 10%; }
 
 header nav div:first-child + div {
-  margin-left: 30%;
-}
+  margin-left: 30%; }
 
 header nav div:first-child + div ul li {
   list-style-type: none;
   display: inline-block;
   padding: 10px;
-  color: #ffffff;
-}
+  color: #ffffff; }
 
 header nav div:first-child + div ul li:hover {
   cursor: pointer;
   background-color: #ffffff52;
-  border-radius: 2px;
-}
-/**************************************************/
+  border-radius: 2px; }
 
 header > div {
   height: 70%;
   background-image: url(../img/monitorizar.jpg);
   background-repeat: no-repeat;
-  background-size: 100%, 70%;
-}
+  background-size: 100%, 70%; }
 
 header > div h1 {
   width: 60%;
-  padding: 18% 0% 0% 10%;
-}
+  padding: 18% 0% 0% 10%; }
 
-/*****************************/
 .primera_seccion {
   padding: 2%;
-  box-shadow: 1px 0.5px 3px #0000007e;
-}
+  box-shadow: 1px 0.5px 3px #0000007e; }
 
 .primera_seccion > div:first-child {
   width: 50%;
   margin: auto;
-  text-align: center;
-}
+  text-align: center; }
 
 .primera_seccion > div:first-child hr {
-  width: 20%;
-}
+  width: 20%; }
 
 .primera_seccion > div:first-child + div {
   width: 70%;
   text-align: center;
   margin: auto;
-  padding-top: 20px;
-}
+  padding-top: 20px; }
 
 .primera_seccion > div:first-child + div div {
   display: inline-block;
   text-align: center;
-  padding: 20px;
-}
+  padding: 20px; }
 
 .primera_seccion > div:first-child + div div i {
   font-size: 80px;
   color: rgba(23, 197, 23, 0.623);
-  margin-bottom: 10px;
-}
-/**********************************/
+  margin-bottom: 10px; }
+
 .segunda_seccion {
-  padding: 2% 2% 0% 2%;
-}
+  padding: 2% 2% 0% 2%; }
 
 .segunda_seccion > div:first-child {
   width: 50%;
   margin: auto;
-  text-align: center;
-}
+  text-align: center; }
 
 .segunda_seccion > div:first-child hr {
-  width: 20%;
-}
+  width: 20%; }
 
 .segunda_seccion > div:first-child + div {
   text-align: center;
-  padding-top: 40px;
-}
+  padding-top: 40px; }
 
 .segunda_seccion > div:first-child + div img {
   display: inline-block;
-  padding: 3px;
-}
-/***********************************/
+  padding: 3px; }
+
 .tercera_seccion {
-  background-color: rgb(49, 192, 49);
+  background-color: #31c031;
   margin: 0% 2%;
   padding: 2% 0%;
-  color: #ffffff;
-}
+  color: #ffffff; }
 
 .tercera_seccion > div:first-child {
   width: 50%;
   margin: auto;
-  text-align: center;
-}
+  text-align: center; }
 
 .tercera_seccion > div:first-child h2 {
-  color: #ffffff;
-}
+  color: #ffffff; }
 
 .tercera_seccion > div:first-child hr {
-  width: 20%;
-}
+  width: 20%; }
 
 .tercera_seccion > div:first-child + div {
   width: 70%;
   margin: auto;
   padding: 3%;
-  column-count: 2;
-}
-/**************************************/
+  column-count: 2; }
 
 .cuarta_seccion {
   margin: 0% 2%;
   padding: 2% 0%;
-  color: #000000;
-}
+  color: #000000; }
 
 .cuarta_seccion > div:first-child {
   width: 50%;
   margin: auto;
-  text-align: center;
-}
+  text-align: center; }
 
 .cuarta_seccion > div:first-child h2 {
-  color: rgb(22, 165, 22);
-}
+  color: #16a516; }
 
 .cuarta_seccion > div:first-child hr {
-  width: 20%;
-}
+  width: 20%; }
 
 .cuarta_seccion > div:first-child + div {
-  background-color: rgb(49, 192, 49);
+  background-color: #31c031;
   margin-top: 40px;
   overflow: auto;
-  text-align: center;
-}
+  text-align: center; }
 
 .cuarta_seccion > div:first-child + div > div {
   color: #ffffff;
@@ -194,211 +156,175 @@ header > div h1 {
   display: inline-block;
   padding: 3%;
   position: relative;
-  left: -15%;
-}
+  left: -15%; }
 
 .cuarta_seccion > div:first-child + div > div:last-child {
-  left: 10%;
-}
+  left: 10%; }
 
 .cuarta_seccion > div:first-child + div > div:last-child * {
   display: inline-block;
   margin-left: 10px;
-  font-size: 25px;
-}
-/*******************************************************************/
+  font-size: 25px; }
+
 .quinta_seccion {
   margin: 0% 2%;
-  color: #000000;
-}
+  color: #000000; }
 
 .quinta_seccion > div:first-child {
   width: 50%;
   margin: auto;
-  text-align: center;
-}
+  text-align: center; }
 
 .quinta_seccion > div:first-child h2 {
-  color: rgb(22, 165, 22);
-}
+  color: #16a516; }
 
 .quinta_seccion > div:first-child hr {
-  width: 20%;
-}
+  width: 20%; }
 
 .quinta_seccion > div:first-child + div {
   margin: 2% 0% 3% 0%;
   padding: 0% 15%;
-  overflow: auto;
-}
+  overflow: auto; }
 
 .quinta_seccion > div:first-child + div > div {
-  float: left;
-}
+  float: left; }
 
 .quinta_seccion > div:first-child + div > div:first-child + div {
   margin-left: 2%;
-  width: 70%;
-}
+  width: 70%; }
 
 .quinta_seccion > div:first-child + div > div:first-child + div * {
-  margin: 0px;
-}
+  margin: 0px; }
 
 .quinta_seccion > div:first-child + div > div:first-child + div > form {
   overflow: auto;
-  margin-top: 10px;
-}
+  margin-top: 10px; }
 
 .quinta_seccion > div:first-child + div > div:first-child + div > form input,
 textarea {
   border: 1px solid #16a516;
-  padding: 7px 0px 7px 5px;
-}
+  padding: 7px 0px 7px 5px; }
 
 .quinta_seccion > div:first-child + div > div:first-child + div > form input {
-  width: 200px;
-}
+  width: 200px; }
 
 .quinta_seccion
-  > div:first-child
-  + div
-  > div:first-child
-  + div
-  > form
-  textarea {
-  width: 98%;
-}
+> div:first-child
++ div
+> div:first-child
++ div
+> form
+textarea {
+  width: 98%; }
 
 .quinta_seccion > div:first-child + div > div:first-child + div > form > div {
   display: block;
-  margin-top: 10px;
-}
+  margin-top: 10px; }
 
 .quinta_seccion
-  > div:first-child
-  + div
-  > div:first-child
-  + div
-  > form
-  > div:first-child
-  > div {
-  display: inline-block;
-}
+> div:first-child
++ div
+> div:first-child
++ div
+> form
+> div:first-child
+> div {
+  display: inline-block; }
 
 .quinta_seccion
-  > div:first-child
-  + div
-  > div:first-child
-  + div
-  > form
-  > div:first-child
-  > div
-  * {
-  display: block;
-}
+> div:first-child
++ div
+> div:first-child
++ div
+> form
+> div:first-child
+> div
+* {
+  display: block; }
 
 .quinta_seccion
-  > div:first-child
-  + div
-  > div:first-child
-  + div
-  > form
-  > div:first-child
-  + div
-  * {
-  display: block;
-}
+> div:first-child
++ div
+> div:first-child
++ div
+> form
+> div:first-child
++ div
+* {
+  display: block; }
 
 .quinta_seccion
-  > div:first-child
-  + div
-  > div:first-child
-  + div
-  > form
-  > div:last-child {
+> div:first-child
++ div
+> div:first-child
++ div
+> form
+> div:last-child {
   text-align: right;
-  padding: 0% 1%;
-}
+  padding: 0% 1%; }
 
 .quinta_seccion
-  > div:first-child
-  + div
-  > div:first-child
-  + div
-  > form
-  > div:last-child
-  input {
+> div:first-child
++ div
+> div:first-child
++ div
+> form
+> div:last-child
+input {
   padding: 7px 70px;
   color: #16a516;
-  background-color: #ffffff;
-}
+  background-color: #ffffff; }
 
 .quinta_seccion
-  > div:first-child
-  + div
-  > div:first-child
-  + div
-  > form
-  > div:last-child
-  input:hover {
+> div:first-child
++ div
+> div:first-child
++ div
+> form
+> div:last-child
+input:hover {
   cursor: pointer;
   color: #ffffff;
-  background-color: #16a516b0;
-}
-/********************************************************/
+  background-color: #16a516b0; }
 
 footer {
   background-color: #2f3131;
-  color: #ffffff;
-}
+  color: #ffffff; }
 
 footer > div:first-child {
   background-color: #464949;
-  padding: 30px;
-}
+  padding: 30px; }
 
 footer > div:first-child p {
   display: inline-block;
-  margin-left: 100px;
-}
+  margin-left: 100px; }
 
 footer > div:first-child a {
   margin-left: 50%;
   font: 16px "Verdana", Calibri;
-  color: #16a516;
-}
+  color: #16a516; }
 
 footer > div:first-child + div {
   padding: 30px;
-  overflow: auto;
-}
+  overflow: auto; }
 
 footer > div:first-child + div div {
   float: left;
-  width: 30%;
-}
+  width: 30%; }
 
 footer > div:first-child + div div:first-child {
-  margin-left: 100px;
-}
+  margin-left: 100px; }
 
 footer > div:first-child + div div:first-child * {
-  display: block;
-}
+  display: block; }
 
 footer > div:first-child + div div:first-child + div * {
   display: block;
-  margin-bottom: 5px;
-}
+  margin-bottom: 5px; }
 
 footer > div:first-child + div div:last-child p {
-  margin-bottom: 15px;
-}
+  margin-bottom: 15px; }
 
 footer > div:first-child + div div:last-child i {
   margin-right: 5px;
-  font-size: 40px;
-}
-
-/***************************************************************/
+  font-size: 40px; }
